2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* libmuine/pointer-list-view.c: (pointer_list_view_init),
	(pointer_foreach_func), (path_foreach_func),
	(pointer_list_view_get_selection),
	(pointer_list_view_set_keep_selection),
	(pointer_list_view_select_first), (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Finish "Add song" window.

2004-01-17  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Optimizations.

2004-01-17  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/SkipToWindow.glade:
	* data/muine.schemas.in:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/ErrorDialog.cs:
	* src/KeyUtils.cs:
	* src/Makefile.am:
	* src/MarkupUtils.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SkipToWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Add an "Import folder" command with a progress dialog, more library 
	work (almost fully functional), error dialogs, various fixes and
	polish.

2004-01-17  Jorn Baayen  <jorn@nl.linux.org>

	* Imported into CVS, this is very much WIP so don't expect anything
	to work. If you want to use it, use the latest release instead.